deployments/greenmarket-chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: greenmarket-chat-app
    namespace: production
spec:
    replicas: 1
    selector:
        matchLabels:
            app: greenmarket-chat-app
    template:
        metadata:
            labels:
                app: greenmarket-chat-app
        spec:
            containers:
            - name: greenmarket-chat-app
              image: sinwoo1225/greenmarket-chat-app:0.0.1
              ports:
              - containerPort: 4000
              imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
    name: greenmarket-chat-app
    namespace: production
spec:
    ports:
    - name: "app-port"
      port: 4000
      targetPort: 4000
    selector:
        app: greenmarket-chat-app
