deployments/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: production
spec:
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30002
  selector:
    app: mysql
  type: NodePort
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  namespace: production
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        args: ['--character-set-server', 'utf8mb4', '--collation-server', 'utf8mb4_unicode_ci']
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
