deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sample
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /*
          backend:
            serviceName: greenmarket-react-app
            servicePort: 80
        - path: /resources/images/*
          backend:
            serviceName: greenmarket-product-app
            servicePort: 8080
        - path: /api/products/*
          backend:
            serviceName: greenmarket-product-app
            servicePort: 8080
        - path: /api/user/*
          backend:
            serviceName: greenmarket-user-app
            servicePort: 5000
        - path: /api/chat/*
          backend:
            serviceName: greenmarket-chat-app
            servicePort: 4000
        - path: /ws/chat/*
          backend:
            serviceName: greenmarket-chat-app
            servicePort: 4000
